[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
